--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "start": "vite"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.2",
     "@codemirror/commands": "^6.3.0",
     "@codemirror/lang-css": "^6.2.1",
     "@codemirror/lang-html": "^6.4.6",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/state": "^6.3.1",
     "@codemirror/view": "^6.22.0",
+    "@uiw/codemirror-theme-aura": "^4.21.20",
     "marked": "^9.1.5",
     "snapsvg": "^0.5.1"
   },
