--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@codemirror/state": "^6.3.1",
     "@codemirror/view": "^6.22.0",
     "@uiw/codemirror-theme-aura": "^4.21.20",
+    "htmlhint": "^1.1.4",
     "marked": "^9.1.5",
     "snapsvg": "^0.5.1"
   },
