Add marked-newtab dep.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "marked": "^9.1.5",
     "marked-base-url": "^1.1.1",
     "marked-pandoc": "^0.0.2",
+    "marked-newtab": "^0.1.0",
     "snapsvg": "^0.5.1"
   },
   "devDependencies": {
